# jaison-core

./: .env-template  .gitignore  APP-API.md  CONTRIBUTING.md  DEVELOPER.md  README.md  README_CN.md  api.yaml  example_prompt.txt  install.py  pyproject.toml  requirements.no_deps.txt  requirements.txt
configs/: default.json  example.json  example.yaml  test.yaml
configs/components/: default.json  example.json  limit_default.json  limit_local_voice.json
configs/hotkeys/: default.json
configs/jaison/: example.json
configs/names/: default.json  example.json
configs/plugins/: example.yaml
configs/translations/: example.json
output/: history.txt
prompts/: default_example.txt  example.txt  implem_1_example.txt  implem_2_example.txt
prompts/characters/: example.txt
prompts/datasets/: ft_generic_prompt.txt
prompts/instructions/: example.txt
prompts/production/: default_example.txt  example_1_openai_prompting.txt  example_2_openai_ft.txt
prompts/scenes/: example.txt
scripts/: README.md  dataset-template.jsonl  dataset_to_openai.py  ds_discord-data.py  ds_multi-to-single.py  ft_local.py  ft_openai.py  llama_3_1_8b_+_unsloth_2x_faster_finetuning.py  llama_finetune.py  openai_finetune.py  validate_jsonl_format.py
src/: config.py  jaison_bot.py  main.py  webclient.py  webui.py
src/cogs/: cogs.py  defaults.py  voice.py
src/commands/: __init__.py  voice.py
src/static/: default.css  log_monitor.js
src/templates/: log_monitoring.html  page_assets.html  page_auth_code.html  page_configs.html  page_controls.html  page_datasets.html  page_home.html
(+143 files in other folders)
